--- a/cellimageQuizApp/templates/exploreimages.html
+++ b/cellimageQuizApp/templates/exploreimages.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">
-        <img src="{% static '../static/images/logoHome.png' %}" width="40" height="40" class="d-inline-block align-top" alt="logoCIL">
+        <img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" width="60" height="60" class="d-inline-block align-top" alt="logoCIL">
     <a class="navbar-brand" href="#"></a>
 
 </nav>
