--- a/cellimageQuizApp/templates/registration/login.html
+++ b/cellimageQuizApp/templates/registration/login.html
@@ -10,11 +10,28 @@
 
     <body>
         <h2>Login</h2>
-        <form method="post">
+        <form method="post" >
           {% csrf_token %}
           {{ form.as_p }}
-          <button class="btn btn-primary type="submit">Login</button>
+          <button class="btn btn-primary" type="submit">Login</button>
         </form>
-    </body>
+    <div class="d-flex justify-content-center text-center">
+        <form class="form-signin col-6">
+              <img class="mb-4" src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt="" width="120" height="90">
+              <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+              <label for="inputEmail" class="sr-only">Email address</label>
+              <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+              <label for="inputPassword" class="sr-only">Password</label>
+              <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required="">
+              <div class="checkbox mb-3">
+                <label>
+                  <input type="checkbox" value="remember-me"> Remember me
+                </label>
+              </div>
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+              <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
+        </form>
+    </div>
 
 </html>
+
