--- a/cellimageQuizApp/static/file_css.css
+++ b/cellimageQuizApp/static/file_css.css
@@ -1,5 +1,5 @@
 h2 {
-    font: italic small-caps bold 16px/2 cursive;
+    font: bolder italic small-caps bold 16px/2 cursive ;
     font-size: 36px;
 }
 
@@ -12,24 +12,24 @@ h2 {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #000;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  text-align:center;
+  text-align: center ;
 }
 
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #77b5fe;
   display: block;
   transition: 0.3s;
 }
 
 .sidenav a:hover{
-  color: #f1f1f1;
+  color: #f5f0f1;
 }
 
 .sidenav .closebtn {
