--- a/cellimageQuizApp/templates/home.html
+++ b/cellimageQuizApp/templates/home.html
@@ -37,14 +37,14 @@
           <!-- Top Content -->
           <div class="col-6 col-md-9 col-lg-8">
             <div class="top-header-content">
-              <a href="#" data-toggle="tooltip" data-placement="bottom" title="abdeljalil.senhaji-rachik@etu.univ-amu.fr"><i class="fa fa-envelope"></i> <span>abdeljalil.senhaji-rachik@etu.univ-amu.fr</span></a>
+              <a href="https://outlook.office.com/mail/inbox" data-toggle="tooltip" data-placement="bottom" title="abdeljalil.senhaji-rachik@etu.univ-amu.fr"><i class="fa fa-envelope"></i> <span>abdeljalil.senhaji-rachik@etu.univ-amu.fr</span></a>
             </div>
           </div>
           <!-- Top Header Social Info -->
           <div class="col-6 col-md-3 col-lg-4">
             <div class="top-header-social-info text-right">
               <a href="https://www.facebook.com/rachiksenhaji" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://twitter.com/" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
               <a href="https://mail.google.com/mail/u/0/#inbox" data-toggle="tooltip" data-placement="bottom" title="Google Plus"><i class="fa fa-google-plus"></i></a>
               <a href="https://www.linkedin.com/in/abdeljalil-senhaji-rachik-173509181/" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -81,10 +81,10 @@
               <div class="classynav">
                 <ul id="nav">
                   <li><a href="/">Home</a></li>
-                  <li><a href="#">QUIZ CATEGORY</a>
+                  <li><a href="#">START QUIZ</a>
                     <ul class="dropdown">
-                      <li><a href="quizz/microscopy/"> * Microscopy image</a></li>
-                      <li><a href="quizz/component"> * Component cell types</a></li>
+                      <li><a href="quiz/microscopy/"> * Microscopy image</a></li>
+                      <li><a href="quiz/component"> * Component cell types</a></li>
                     </ul>
                   </li>
                   <li><a href="/exploreimages">Explore Page</a></li>
