--- a/cellimageQuizApp/templates/information.html
+++ b/cellimageQuizApp/templates/information.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 {% load static %}
 
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
+    <meta name="description" content="Biological Cell image Quiz ">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Quiz Information</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -17,8 +21,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <a class="nav-brand" href="/home.html"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}"
-                                                        alt=""></a>
+            <a class="nav-brand" href="/"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
         </div>
         <div class="modal-body">
             Welcome in Cell Image Quiz.<br><br>
