--- a/cellimageQuizApp/templates/exploreimages.html
+++ b/cellimageQuizApp/templates/exploreimages.html
@@ -3,42 +3,65 @@
 {% load bootstrap3 %}
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Biological Cell image Quiz ">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="{% static 'cellimageQuizApp/img/core-img/logo1.png' %}"> <!-- Favicon -->
     <title>Explore Images</title>
-    <link rel="stylesheet" href="{% static 'mycss.css' %}">
+    <link rel="stylesheet" href="{% static 'file_css.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" /> <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"> </script> <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script></center>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">
-        <img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" width="60" height="60" class="d-inline-block align-top" alt="logoCIL">
-    <a class="navbar-brand" href="#"></a>
-
+<nav class="navbar navbar-expand-sm bg-dark justify-content-center">
+    <a class="navbar-nav " href="/">
+        <img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" class="d-inline-block align-top" alt="">
+    <a class="navbar-nav" href="#"></a>
 </nav>
 
 {% if filter %}
-    <form action="" method="get" class="form form-inline" >
+    <form action="" method="get" class="form form-group col-md-auto " >
         {% bootstrap_form filter.form layout='inline' %}
-        {% bootstrap_button 'filter' %}
+        {% bootstrap_button 'FILTER' %}
     </form>
 {% endif %}
 {% render_table table 'django_tables2/bootstrap.html' %}
 
 
 <!-- Footer -->
-<footer class="page-footer font-small bg-dark">
-
-  <div class="footer-copyright text-center py-3" style="font-size:12px">
-    <img src="{% static '/images/logo.jpg' %}" href="http://www.cellimagelibrary.org/" width="100" height="40" class="d-inline-block align-top" alt="">
-    <br><br>Cell Image Library:
-    <a href="https://mdbootstrap.com/"> cellimagelibrary.org</a>
-  </div>
-
+  <!-- ***** Footer Area Start ***** -->
+<footer class=" mt-5 bg-img bg-gradient-overlay" style="background-image: url({% static 'images/39954.jpg' %});">
+    <div class="container">
+      <div class="row">
+        <!-- Single Footer Widget -->
+        <div class="col-12 col-sm-auto col-lg-12 text-center">
+          <div class="single-footer-widget">
+            <a href="/" class="d-block mb-4"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
+            <p>Welcome to CellImageQuiz : Increase your knowledge in biology.</p>
+            <div class="footer-contact">
+              <p><i class="icon_phone"></i> +336 24 28 03 91</p>
+              <p><i class="icon_mail"></i>abdeljalil.senhaji-rachik@etu.univ-amu.fr</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Copywrite Area -->
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="copywrite-content">
+            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Create By Abdeljalil | <script>document.write(new Date().getFullYear());</script>  | This images is made with <i aria-hidden="true"></i> by <a href="http://cellimagelibrary.org/home" target="_blank">Cell Image <a href="https://themeslab.org/" target="_blank"></a>Library</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 </footer>
-<!-- Footer -->
-
 </body>
