--- a/cellimageQuizApp/templates/registration/sign_up.html
+++ b/cellimageQuizApp/templates/registration/sign_up.html
@@ -3,18 +3,27 @@
 <html>
 
     <head>
-        <link rel="stylesheet" href="{% static "mycss.css" %}">
+        <meta charset="UTF-8">
+        <meta name="description" content="Biological Cell image Quiz ">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="{% static "file_css.css" %}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
 
     <body>
-          <h2>Sign up</h2>
-          <form method="post">
+        <nav class="navbar navbar-expand-sm bg-dark justify-content-center">
+        <a class="navbar-nav " href="/">
+            <img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" class="d-inline-block align-top" alt="">
+        <a class="navbar-nav" href="#"></a>
+        </nav>
+        <h2>Sign up</h2>
+        <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <button class="btn btn-primary type=" submit ">Sign up</button>
-          </form>
+        </form>
     </body>
 
 </html>
