--- a/cellimageQuizApp/templates/information.html
+++ b/cellimageQuizApp/templates/information.html
@@ -24,13 +24,13 @@
             <a class="nav-brand" href="/"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
         </div>
         <div class="modal-body">
-            Welcome in Cell Image Quiz.<br><br>
+            <strong>Welcome in Cell Image Quiz.</strong><br><br>
             Registration is required to start the quiz.<br><br>
             After registration:<br><br>
-            - You have two categories of Quiz:<br><br>
+            - You have two categories of <strong> Quiz </strong>:<br><br>
             -> The one with the images of the types of the microscope.<br><br>
             -> and the other with the types of the cellular components<br><br>
-            A score of the point that is registered for each game.<br><br>
+            A score of the point that is <strong> registered </strong>for each game.<br><br>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
