--- a/cellimageQuizApp/templates/registration/registered.html
+++ b/cellimageQuizApp/templates/registration/registered.html
@@ -13,10 +13,10 @@
             <div class="col-12">
               <!-- Welcome Text -->
               <div class="welcome-text text-center">
-                <h2 data-animation="fadeInUp" data-delay="100ms">Welcome {{ user }} to the world of microscopic images of cells and their organelles</h2>
+                <h2 data-animation="fadeInUp" data-delay="100ms">Welcome <strong> {{ user }} </strong> to the world of microscopic images of cells and their organelles</h2>
                 <p data-animation="fadeInUp" data-delay="300ms">You want to develop your knowledge in biology. it's time to start a quiz.</p>
                 <div class="welcome-btn-group">
-                  <a href="#" class="btn dento-btn mx-2" data-animation="fadeInUp" data-delay="500ms">Start The Quiz</a>
+                  <a href="/" class="btn dento-btn mx-2" data-animation="fadeInUp" data-delay="500ms">Start The Quiz</a>
                 </div>
               </div>
             </div>
