--- a/cellimageQuizApp/templates/registration/unregistered.html
+++ b/cellimageQuizApp/templates/registration/unregistered.html
@@ -16,7 +16,7 @@
                 <h2 data-animation="fadeInUp" data-delay="100ms">Welcome to the world of microscopic images of cells and their organelles</h2>
                 <p data-animation="fadeInUp" data-delay="300ms">You want to develop your knowledge in biology. it's time to start a quiz.</p>
                 <div class="welcome-btn-group">
-                  <a href="#" class="btn dento-btn mx-2" data-animation="fadeInUp" data-delay="500ms">Start The Quiz</a>
+                  <a href="/" class="btn dento-btn mx-2" data-animation="fadeInUp" data-delay="500ms">Start The Quiz</a>
                 </div>
               </div>
             </div>
