--- a/cellimageQuizApp/templates/registration/registered.html
+++ b/cellimageQuizApp/templates/registration/registered.html
@@ -16,7 +16,7 @@
                 <h2 data-animation="fadeInUp" data-delay="100ms">Welcome <strong> {{ user }} </strong> to the world of microscopic images of cells and their organelles</h2>
                 <p data-animation="fadeInUp" data-delay="300ms">You want to develop your knowledge in biology. it's time to start a quiz.</p>
                 <div class="welcome-btn-group">
-                  <a href="/" class="btn dento-btn mx-2" data-animation="fadeInUp" data-delay="500ms">Start The Quiz</a>
+                  <a href="quiz/microscopy/" class="btn dento-btn mx-2" data-animation="fadeInUp" data-delay="500ms">Start The Quiz</a>
                 </div>
               </div>
             </div>
@@ -34,7 +34,7 @@
                 <h2 data-animation="fadeInDown" data-delay="100ms">Welcome {{ user }} to the world of microscopic images </h2>
                 <p data-animation="fadeInDown" data-delay="300ms">You want to develop your knowledge in biology. it's time to start a quiz.</p>
                 <div class="welcome-btn-group">
-                  <a href="#" class="btn dento-btn mx-2" data-animation="fadeInDown" data-delay="500ms">Start The Quiz</a>
+                  <a href="quiz/component" class="btn dento-btn mx-2" data-animation="fadeInDown" data-delay="500ms">Start The Quiz</a>
                 </div>
               </div>
             </div>
