--- a/cellimageQuizApp/templates/exploreimages.html
+++ b/cellimageQuizApp/templates/exploreimages.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Biological Cell image Quiz ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="{% static 'cellimageQuizApp/img/core-img/logo1.png' %}"> <!-- Favicon -->
-    <title>Explore Images</title>
+    <!-- Favicon -->
+    <link rel="icon" href="{% static 'cellimageQuizApp/img/core-img/logo1.png' %}">
+    <title>Explore Images Biological Cell Image Quiz</title>
     <link rel="stylesheet" href="{% static 'file_css.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" /> <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"> </script> <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script></center>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
@@ -25,7 +25,7 @@
 </nav>
 
 {% if filter %}
-    <form action="" method="get" class="form form-group col-md-auto " >
+    <form action="" method="get" class="form form-group col-md-auto" autocomplete="on">
         {% bootstrap_form filter.form layout='inline' %}
         {% bootstrap_button 'FILTER' %}
     </form>
@@ -33,13 +33,12 @@
 {% render_table table 'django_tables2/bootstrap.html' %}
 
 
-<!-- Footer -->
-  <!-- ***** Footer Area Start ***** -->
-<footer class=" mt-5 bg-img bg-gradient-overlay" style="background-image: url({% static 'images/39954.jpg' %});">
+<!-- ***** Footer ***** -->
+  <footer class=" mt-5 bg-img bg-gradient-overlay" style="background-image: url({% static 'images/39954.jpg' %});">
     <div class="container">
       <div class="row">
         <!-- Single Footer Widget -->
-        <div class="col-12 col-sm-auto col-lg-12 text-center">
+        <div class="col-12 text-center">
           <div class="single-footer-widget">
             <a href="/" class="d-block mb-4"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
             <p>Welcome to CellImageQuiz : Increase your knowledge in biology.</p>
@@ -47,21 +46,28 @@
               <p><i class="icon_phone"></i> +336 24 28 03 91</p>
               <p><i class="icon_mail"></i>abdeljalil.senhaji-rachik@etu.univ-amu.fr</p>
             </div>
+            <div class="copywrite-content">
+              <p>Create By <strong> Abdeljalil </strong> | This images is made with <i aria-hidden="true"></i> by <a href="http://cellimagelibrary.org/home" target="_blank">Cell Image <a href="https://themeslab.org/" target="_blank"></a>Library</a></p>
+            </div>
           </div>
-        </div>
       </div>
     </div>
-    <!-- Copywrite Area -->
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="copywrite-content">
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Create By Abdeljalil | <script>document.write(new Date().getFullYear());</script>  | This images is made with <i aria-hidden="true"></i> by <a href="http://cellimagelibrary.org/home" target="_blank">Cell Image <a href="https://themeslab.org/" target="_blank"></a>Library</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-</footer>
+  </footer>
+<!-- ***** Footer  ***** -->
+
+      <!-- ******* All JavaScript ******* -->
+
+  <!-- jQuery js -->
+  <script src="{% static 'cellimageQuizApp/js/jquery.min.js' %}"></script>
+  <!-- Popper js -->
+  <script src="{% static 'cellimageQuizApp/js/popper.min.js' %}"></script>
+  <!-- Bootstrap js -->
+  <script src="{% static 'cellimageQuizApp/js/bootstrap.min.js' %}"></script>
+  <!-- All js -->
+  <script src="{% static 'cellimageQuizApp/js/dento.bundle.js' %}"></script>
+  <!-- Active js -->
+  <script src="{% static 'cellimageQuizApp/js/default-assets/active.js' %}"></script>
+
+
+
 </body>
