--- a/cellimageQuizApp/templates/home.html
+++ b/cellimageQuizApp/templates/home.html
@@ -81,7 +81,7 @@
               <div class="classynav">
                 <ul id="nav">
                   <li><a href="/">Home</a></li>
-                  <li><a href="#">START QUIZ</a>
+                  <li><a href="#">START THE QUIZ</a>
                     <ul class="dropdown">
                       <li><a href="quiz/microscopy/"> * Microscopy image</a></li>
                       <li><a href="quiz/component"> * Component cell types</a></li>
@@ -134,30 +134,21 @@
             <p>Confocal image of synaptic connexions in the mouse olivo-cerebellar system.  Purkinje cells (immunofluorescence, blue), olivary axons (anterograde tracing, yellow) and synaptic terminals (immunofluorescence, red) are shown, revealing the highly speciﬁc organization of neuronal connexions in the mouse cerebellum.  Honorable Mention, 2009 Olympus BioScapes Digital Imaging Competition.</p>
 
             <!-- Single Skills Area -->
-            <div class="single-skills-area mt-30">
-              <h6>Mode : Confocal microscopy</h6>
-              <div id="bar1" class="barfiller">
-                <span class="tip"></span>
-                <span class="fill" data-percentage="100"></span>
-              </div>
-            </div>
-
-            <!-- Single Skills Area -->
-            <div class="single-skills-area mt-30">
-              <h6>Component : Synaptic terminal</h6>
-              <div id="bar2" class="barfiller">
-                <span class="tip"></span>
-                <span class="fill" data-percentage="100"></span>
-              </div>
-            </div>
-
-            <!-- Single Skills Area -->
-            <div class="single-skills-area mt-30">
+            <div class="section-heading">
               <h6>Cell type : Neuron</h6>
-              <div id="bar3" class="barfiller">
-                <span class="tip"></span>
-                <span class="fill" data-percentage="100"></span>
-              </div>
+              <div class="line"></div>
+            </div>
+
+            <!-- Single Skills Area -->
+            <div class="section-heading">
+              <h6>Component : Synaptic terminal</h6>
+              <div class="line"></div>
+            </div>
+
+            <!-- Single Skills Area -->
+              <div class="section-heading">
+              <h6>Mode : Confocal microscopy</h6>
+              <div class="line"></div>
             </div>
           </div>
         </div>
@@ -172,7 +163,7 @@
 
 
   <!-- Cool Facts Area Start -->
-  <section class="dento-cta-area">
+  <section class="dento-cta-area section-padding-100-0">
     <div class="container">
       <div class="row">
         <!-- Cool Facts Area -->
@@ -263,11 +254,11 @@
       </div>
     </div>
   </section>
-  <!-- ***** Dento Dentist Area End ***** -->
+  <!-- ***** quiz Area End ***** -->
 
 
 
-  <!-- Dento Service Area Start -->
+  <!-- quiz Service Area Start -->
   <section class="dento-service-area section-padding-100-0 bg-img bg-gradient-overlay jarallax clearfix" style="background-image: url('{% static 'images/214.jpg' %}');">
     <div class="container">
       <div class="row align-items-center">
@@ -309,9 +300,7 @@
       </div>
     </div>
   </section>
-  <!-- Dento Service Area End -->
-
-
+  <!-- quiz Service Area End -->
 
 
   <!-- add espace abdeljalil -->
@@ -385,7 +374,7 @@
   <section class="book-an-oppointment-area section-padding-100 bg-img bg-gradient-overlay jarallax clearfix" style="background-image: url('{% static 'images/214.jpg' %}');">
   <div class="container">
 	<div class="row">
-      <div class="col-12">
+      <div class="col-6">
         <div class="section-heading text-center white">
           <h2>CONTACT</h2>
           <div class="line"></div>
@@ -437,12 +426,12 @@
 
 
 
-  <!-- ***** Footer Area Start ***** -->
+<!-- ***** Footer ***** -->
   <footer class=" mt-5 bg-img bg-gradient-overlay" style="background-image: url({% static 'images/39954.jpg' %});">
     <div class="container">
       <div class="row">
         <!-- Single Footer Widget -->
-        <div class="col-12 col-sm-auto col-lg-12 text-center">
+        <div class="col-12 text-center">
           <div class="single-footer-widget">
             <a href="/" class="d-block mb-4"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
             <p>Welcome to CellImageQuiz : Increase your knowledge in biology.</p>
@@ -450,26 +439,16 @@
               <p><i class="icon_phone"></i> +336 24 28 03 91</p>
               <p><i class="icon_mail"></i>abdeljalil.senhaji-rachik@etu.univ-amu.fr</p>
             </div>
+            <div class="copywrite-content">
+              <p>Create By <strong> Abdeljalil </strong> | This images is made with <i aria-hidden="true"></i> by <a href="http://cellimagelibrary.org/home" target="_blank">Cell Image <a href="https://themeslab.org/" target="_blank"></a>Library</a></p>
+            </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <!-- Copywrite Area -->
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="copywrite-content">
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Create By Abdeljalil | <script>document.write(new Date().getFullYear());</script>  | This images is made with <i aria-hidden="true"></i> by <a href="http://cellimagelibrary.org/home" target="_blank">Cell Image <a href="https://themeslab.org/" target="_blank"></a>Library</a>
-            </p>
-          </div>
-        </div>
       </div>
     </div>
   </footer>
-  <!-- ***** Footer Area End ***** -->
+<!-- ***** Footer  ***** -->
 
-  <!-- ******* All JS ******* -->
+  <!-- ******* All JavaScript ******* -->
   <!-- jQuery js -->
   <script src="{% static 'cellimageQuizApp/js/jquery.min.js' %}"></script>
   <!-- Popper js -->
