--- a/cellimageQuizApp/templates/information.html
+++ b/cellimageQuizApp/templates/information.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Biological Cell image Quiz ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <!-- Favicon -->
+    <link rel="icon" href="{% static 'cellimageQuizApp/img/core-img/logo1.png' %}">
     <title>Quiz Information</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
