--- a/cellimageQuizApp/templates/registration/login.html
+++ b/cellimageQuizApp/templates/registration/login.html
@@ -5,11 +5,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Biological Cell image Quiz ">
+          <!-- Favicon -->
+        <link rel="icon" href="{% static 'cellimageQuizApp/img/core-img/logo1.png' %}">
+        <title>Login Biological Cell Image Quiz</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="{% static "file_css.css" %}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'cellimageQuizApp/css/style.css' %}">
     </head>
 
     <body>
@@ -18,28 +22,66 @@
             <img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" class="d-inline-block align-top" alt=""><a class="navbar-nav" href="#"></a>
         </nav>
         <h2>Login</h2>
-        <form method="post" >
+        <form method="post" autocomplete="on">
           {% csrf_token %}
           {{ form.as_p }}
           <button class="btn btn-primary" type="submit">Login</button>
         </form>
-    <div class="d-flex justify-content-center text-center">
-        <form class="form-signin col-6">
-              <img class="mb-4" src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt="" width="120" height="90">
-              <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-              <label for="inputEmail" class="sr-only">Email address</label>
-              <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-              <label for="inputPassword" class="sr-only">Password</label>
-              <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required="">
-              <div class="checkbox mb-3">
-                <label>
-                  <input type="checkbox" value="remember-me"> Remember me
-                </label>
-              </div>
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-              <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
-        </form>
+        <div class="d-flex justify-content-center text-center">
+            <form class="form-signin col-6">
+                  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+                  <label for="inputEmail" class="sr-only">Email address</label>
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+                  <label for="inputPassword" class="sr-only">Password</label>
+                  <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required="">
+                  <div class="checkbox mb-3">
+                    <label>
+                      <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                  </div>
+                  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                  <p class="mt-5 mb-3 text-muted">© 2021-2022</p>
+            </form>
+        </div>
+    </body>
+
+<!-- ***** Footer ***** -->
+  <footer class=" mt-5 bg-img bg-gradient-overlay" style="background-image: url({% static 'images/39954.jpg' %});">
+    <div class="container">
+      <div class="row">
+        <!-- Single Footer Widget -->
+        <div class="col-12 text-center">
+          <div class="single-footer-widget">
+            <a href="/" class="d-block mb-4"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
+            <p>Welcome to CellImageQuiz : Increase your knowledge in biology.</p>
+            <div class="footer-contact">
+              <p><i class="icon_phone"></i> +336 24 28 03 91</p>
+              <p><i class="icon_mail"></i>abdeljalil.senhaji-rachik@etu.univ-amu.fr</p>
+            </div>
+            <div class="copywrite-content">
+              <p>Create By <strong> Abdeljalil </strong> | This images is made with <i aria-hidden="true"></i> by <a href="http://cellimagelibrary.org/home" target="_blank">Cell Image <a href="https://themeslab.org/" target="_blank"></a>Library</a></p>
+            </div>
+          </div>
+      </div>
     </div>
+  </footer>
+<!-- ***** Footer  ***** -->
+
+      <!-- ******* All JavaScript ******* -->
+
+  <!-- jQuery js -->
+  <script src="{% static 'cellimageQuizApp/js/jquery.min.js' %}"></script>
+  <!-- Popper js -->
+  <script src="{% static 'cellimageQuizApp/js/popper.min.js' %}"></script>
+  <!-- Bootstrap js -->
+  <script src="{% static 'cellimageQuizApp/js/bootstrap.min.js' %}"></script>
+  <!-- All js -->
+  <script src="{% static 'cellimageQuizApp/js/dento.bundle.js' %}"></script>
+  <!-- Active js -->
+  <script src="{% static 'cellimageQuizApp/js/default-assets/active.js' %}"></script>
+
 
 </html>
+
+
 
