--- a/cellimageQuizApp/templates/registration/sign_up.html
+++ b/cellimageQuizApp/templates/registration/sign_up.html
@@ -5,25 +5,77 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Biological Cell image Quiz ">
+          <!-- Favicon -->
+        <link rel="icon" href="{% static 'cellimageQuizApp/img/core-img/logo1.png' %}">
+        <title>Sign_up Biological Cell Image Quiz</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="{% static "file_css.css" %}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'cellimageQuizApp/css/style.css' %}">
+
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-sm bg-dark justify-content-center">
+    <nav class="navbar navbar-expand-sm bg-dark justify-content-center">
         <a class="navbar-nav " href="/">
             <img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" class="d-inline-block align-top" alt="">
         <a class="navbar-nav" href="#"></a>
-        </nav>
-        <h2>Sign up</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-primary type=" submit ">Sign up</button>
+    </nav>
+    <div class="d-flex justify-content-center ">
+        <form class="form-signin col-6">
+            <h2 class="mb-5 text-center">Please sign in</h2>
+            <form method="post" autocomplete="on" style="">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-primary type=" submit ">Sign up</button>
+            </form>
         </form>
+    </div>
+    <div class="row">
+    <!-- Section Heading -->
+    <div class="col-12">
+      <div class="section-heading text-center white">
+        <h2></h2>
+        <div></div>
+      </div>
+    </div>
+    </div>
     </body>
+
+<!-- ***** Footer ***** -->
+    <footer class=" mt-5 bg-img bg-gradient-overlay" style="background-image: url({% static 'images/39954.jpg' %});">
+    <div class="container">
+      <div class="row">
+        <!-- Single Footer Widget -->
+        <div class="col-12 text-center">
+          <div class="single-footer-widget">
+            <a href="/" class="d-block mb-4"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
+            <p>Welcome to CellImageQuiz : Increase your knowledge in biology.</p>
+            <div class="footer-contact">
+              <p><i class="icon_phone"></i> +336 24 28 03 91</p>
+              <p><i class="icon_mail"></i>abdeljalil.senhaji-rachik@etu.univ-amu.fr</p>
+            </div>
+            <div class="copywrite-content">
+              <p>Create By <strong> Abdeljalil </strong> | This images is made with <i aria-hidden="true"></i> by <a href="http://cellimagelibrary.org/home" target="_blank">Cell Image <a href="https://themeslab.org/" target="_blank"></a>Library</a></p>
+            </div>
+          </div>
+      </div>
+    </div>
+    </footer>
+<!-- ***** Footer  ***** -->
+
+      <!-- ******* All JavaScript ******* -->
+
+  <!-- jQuery js -->
+  <script src="{% static 'cellimageQuizApp/js/jquery.min.js' %}"></script>
+  <!-- Popper js -->
+  <script src="{% static 'cellimageQuizApp/js/popper.min.js' %}"></script>
+  <!-- Bootstrap js -->
+  <script src="{% static 'cellimageQuizApp/js/bootstrap.min.js' %}"></script>
+  <!-- All js -->
+  <script src="{% static 'cellimageQuizApp/js/dento.bundle.js' %}"></script>
+  <!-- Active js -->
+  <script src="{% static 'cellimageQuizApp/js/default-assets/active.js' %}"></script>
 
 </html>
