--- a/cellimageQuizApp/templates/information.html
+++ b/cellimageQuizApp/templates/information.html
@@ -26,13 +26,16 @@
             <a class="nav-brand" href="/"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
         </div>
         <div class="modal-body">
-            <strong>Welcome in Cell Image Quiz.</strong><br><br>
-            Registration is required to start the quiz.<br><br>
-            After registration:<br><br>
-            - You have two categories of <strong> Quiz </strong>:<br><br>
-            -> The one with the images of the types of the microscope.<br><br>
-            -> and the other with the types of the cellular components<br><br>
-            A score of the point that is <strong> registered </strong>for each game.<br><br>
+            <strong> &#129300 Welcome in Cell Image Quiz.</strong><br><br>
+            --> Registration is required to start the quiz.<br><br>
+            --> After registration:<br><br>
+            &#10004 You have two categories of <strong> Quiz </strong>:<br><br>
+            &#10004 The one with the images of the types of the microscope.<br><br>
+            &#10004 and the other with the types of the cellular components<br><br>
+            --> A score of the point that is <strong> registered </strong>for each game.<br><br>
+            &#11035 Total score: <br>
+            &#11035 Component Cell Types score<br>
+            &#11035 Microscopy Images score <br></p>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
