--- a/cellimageQuizApp/templates/TwoQuiz.html
+++ b/cellimageQuizApp/templates/TwoQuiz.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'file_css.css' %}">
     <title>Quiz Component cell type</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link href="{% static '/bootstrap-4.0.0-dist/css/bootstrap.min.css' %} rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static '/bootstrap-4.0.0-dist/css/bootstrap.min.css' %}  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -53,7 +53,7 @@
             </center>
         </div>
 
-        <div class="reponses">
+        <div class="reponse">
 
             {% if user_answer %}
                    <!-- Modal -->
@@ -63,10 +63,11 @@
                           <div class="modal-content">
                             <div class="modal-body">
                               <p1>&#9989 WELL DONE <strong> {{ user }} ! </strong> &#128075; </p1>
-                                <h3 style="color: teal;">Good response ! </h3>
+                                <h3 style="color: teal;"> Good response ! </h3>
+                                <p>{{ answer_definition }}</p>
                             </div>
                             <div class="modal-footer">
-                                {{ images_currently }}
+                                <!-- {{ images_currently }} -->
                                 <form method="get" action="/exploreimages/?id={{ images_currently.id }}">
                                     <button type="submit" class="btn btn-secondary">More informations</button>
                                 </form>
@@ -88,9 +89,10 @@
                             <div class="modal-body">
                               <p1> &#10060    Try another time. I trust you <strong> {{ user }} ! </strong> &#128170</p1>
                                 <h3 style="color: red;">Bad response ! The real answer is : {{ true_answer }}</h3>
+                                <p>{{ answer_definition }}</p>
                             </div>
                             <div class="modal-footer">
-                                {{ images_currently }}
+                                <!-- {{ images_currently }} -->
                                 <form method="get" action="/exploreimages/?id={{ images_currently.id }}">
                                     <button type="submit" class="btn btn-secondary">More informations</button>
                                 </form>
