--- a/cellimageQuizApp/templates/exploreimages.html
+++ b/cellimageQuizApp/templates/exploreimages.html
@@ -1,73 +1,84 @@
-{% load render_table from django_tables2 %}
+
 {% load static %}
-{% load bootstrap3 %}
+{% load bootstrap4 %}
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Biological Cell image Quiz ">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="icon" href="{% static 'cellimageQuizApp/img/core-img/logo1.png' %}">     <!-- Favicon -->
+        <title>Explore Images Biological Cell Image Quiz</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"> </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
+        <!-------------------------------->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'cellimageQuizApp/css/style.css' %}">
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Biological Cell image Quiz ">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Favicon -->
-    <link rel="icon" href="{% static 'cellimageQuizApp/img/core-img/logo1.png' %}">
-    <title>Explore Images Biological Cell Image Quiz</title>
-    <link rel="stylesheet" href="{% static 'file_css.css' %}">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" /> <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"> </script> <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script></center>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
-
-<body>
-<nav class="navbar navbar-expand-sm bg-dark justify-content-center">
-    <a class="navbar-nav " href="/">
-        <img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" class="d-inline-block align-top" alt="">
-    <a class="navbar-nav" href="#"></a>
-</nav>
-
-{% if filter %}
-    <form action="" method="get" class="form form-group col-md-auto" autocomplete="on">
-        {% bootstrap_form filter.form layout='inline' %}
-        {% bootstrap_button 'FILTER' %}
-    </form>
-{% endif %}
-{% render_table table 'django_tables2/bootstrap.html' %}
+    <body>
+    <nav class="navbar navbar-expand-sm bg-dark justify-content-center">
+        <a class="navbar-nav " href="/">
+            <img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" class="d-inline-block align-top" alt="">
+        <a class="navbar-nav" href="#"></a>
+    </nav>
 
 
-<!-- ***** Footer ***** -->
-  <footer class=" mt-5 bg-img bg-gradient-overlay" style="background-image: url({% static 'images/39954.jpg' %});">
-    <div class="container">
-      <div class="row">
-        <!-- Single Footer Widget -->
-        <div class="col-12 text-center">
-          <div class="single-footer-widget">
-            <a href="/" class="d-block mb-4"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
-            <p>Welcome to CellImageQuiz : Increase your knowledge in biology.</p>
-            <div class="footer-contact">
-              <p><i class="icon_phone"></i> +336 24 28 03 91</p>
-              <p><i class="icon_mail"></i>abdeljalil.senhaji-rachik@etu.univ-amu.fr</p>
-            </div>
-            <div class="copywrite-content">
-              <p>Create By <strong> Abdeljalil </strong> | This images is made with <i aria-hidden="true"></i> by <a href="http://cellimagelibrary.org/home" target="_blank">Cell Image <a href="https://themeslab.org/" target="_blank"></a>Library</a></p>
-            </div>
+
+    {% if filter %}
+        <form action="" method="get" class="form form-group col-md-auto" autocomplete="on">
+
+            {% bootstrap_form filter.form layout='sr-only' %}
+            {% bootstrap_button 'FILTER' %}
+        </form>
+    {% endif %}
+    {% load render_table from django_tables2 %}
+    {% render_table table 'django_tables2/bootstrap.html' %}
+
+
+
+
+
+
+    <!-- ***** Footer ***** -->
+      <footer class=" mt-5 bg-img bg-gradient-overlay" style="background-image: url({% static 'images/39954.jpg' %});">
+        <div class="container">
+          <div class="row">
+            <!-- Single Footer Widget -->
+            <div class="col-12 text-center mt-5">
+              <div class="single-footer-widget">
+                <a href="/" class="d-block mb-4"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
+                <p>Welcome to CellImageQuiz : Increase your knowledge in biology.</p>
+                <div class="footer-contact">
+                  <p><i class="icon_phone"></i> +336 24 28 03 91</p>
+                  <p><i class="icon_mail"></i>abdeljalil.senhaji-rachik@etu.univ-amu.fr</p>
+                </div>
+                <div class="copywrite-content">
+                  <p>Create By <strong> Abdeljalil </strong> | This images is made with <i aria-hidden="true"></i> by <a href="http://cellimagelibrary.org/home" target="_blank">Cell Image <a href="https://themeslab.org/" target="_blank"></a>Library</a></p>
+                </div>
+              </div>
           </div>
-      </div>
-    </div>
-  </footer>
-<!-- ***** Footer  ***** -->
+        </div>
+      </footer>
+    <!-- ***** Footer  ***** -->
 
-      <!-- ******* All JavaScript ******* -->
+          <!-- ******* All JavaScript ******* -->
 
-  <!-- jQuery js -->
-  <script src="{% static 'cellimageQuizApp/js/jquery.min.js' %}"></script>
-  <!-- Popper js -->
-  <script src="{% static 'cellimageQuizApp/js/popper.min.js' %}"></script>
-  <!-- Bootstrap js -->
-  <script src="{% static 'cellimageQuizApp/js/bootstrap.min.js' %}"></script>
-  <!-- All js -->
-  <script src="{% static 'cellimageQuizApp/js/dento.bundle.js' %}"></script>
-  <!-- Active js -->
-  <script src="{% static 'cellimageQuizApp/js/default-assets/active.js' %}"></script>
-
+    <!-- jQuery js -->
+    <script src="{% static 'cellimageQuizApp/js/jquery.min.js' %}"></script>
+    <!-- Popper js -->
+    <script src="{% static 'cellimageQuizApp/js/popper.min.js' %}"></script>
+    <!-- Bootstrap js -->
+    <script src="{% static 'cellimageQuizApp/js/bootstrap.min.js' %}"></script>
+    <!-- All js -->
+    <script src="{% static 'cellimageQuizApp/js/dento.bundle.js' %}"></script>
+    <!-- Active js -->
+    <script src="{% static 'cellimageQuizApp/js/default-assets/active.js' %}"></script>
 
 
-</body>
+
+    </body>
+
+</html>
