--- a/cellimageQuizApp/templates/registration/login.html
+++ b/cellimageQuizApp/templates/registration/login.html
@@ -10,8 +10,7 @@
         <title>Login Biological Cell Image Quiz</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'cellimageQuizApp/css/style.css' %}">
     </head>
@@ -21,26 +20,17 @@
         <a class="navbar-nav " href="/">
             <img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" class="d-inline-block align-top" alt=""><a class="navbar-nav" href="#"></a>
         </nav>
-        <h2>Login</h2>
-        <form method="post" autocomplete="on">
-          {% csrf_token %}
-          {{ form.as_p }}
-          <button class="btn btn-primary" type="submit">Login</button>
-        </form>
-        <div class="d-flex justify-content-center text-center">
-            <form class="form-signin col-6">
-                  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                  <label for="inputEmail" class="sr-only">Email address</label>
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-                  <label for="inputPassword" class="sr-only">Password</label>
-                  <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required="">
-                  <div class="checkbox mb-3">
+        <div class="d-flex justify-content-center text-center mb-5 mt-5">
+            <form method="post" class="form-signin mb-5 col-6">
+                <h2 class="h2 mb-5 font-weight-normal"><strong>&#128300 Please login first &#128300</strong></h2>
+                {% csrf_token %}
+                {{ form.as_p }}
+                  <div class="checkbox mb-2 ">
                     <label>
                       <input type="checkbox" value="remember-me"> Remember me
                     </label>
                   </div>
-                  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                  <p class="mt-5 mb-3 text-muted">© 2021-2022</p>
+                  <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
             </form>
         </div>
     </body>
@@ -50,7 +40,7 @@
     <div class="container">
       <div class="row">
         <!-- Single Footer Widget -->
-        <div class="col-12 text-center">
+        <div class="col-12 text-center mt-5">
           <div class="single-footer-widget">
             <a href="/" class="d-block mb-4"><img src="{% static 'cellimageQuizApp/img/core-img/image.png' %}" alt=""></a>
             <p>Welcome to CellImageQuiz : Increase your knowledge in biology.</p>
